# update-singbox

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  config.template.json  pyproject.toml  test_update_singbox.py  update_singbox.py
docs/: PHASE2_INTEGRATION_GUIDE.md  SCENARIOS.md
schemas/: app-settings.schema.json  client-profile.schema.json  inbound-profile.schema.json  logging-config.schema.json  sboxmgr-config.schema.json  service-config.schema.json
scripts/: generate_schemas.py
scripts/i18n/: sync_keys.py
src/sboxmgr/: __init__.py
tests/: __init__.py  conftest.py  integration_test.py  mvp_ecosystem_test.py  test_agent_bridge.py  test_bugfixes_stage3.py  test_bugfixes_stage3_additional.py  test_cli_common.py  test_cli_config_commands.py  test_cli_errors.py  test_cli_general.py  test_cli_list.py  test_cli_main.py  test_cli_matrix.py  test_cli_selection.py  test_cli_utils.py  test_config_fetch.py  test_config_generate.py  test_config_generate_bugfixes.py  test_config_loader.py  test_config_validator.py  test_env_variables.py  test_events.py  test_format_version_check.py  test_json_exporter_internal_validation.py  test_json_fetcher_comprehensive.py  test_lang_commands.py  test_logging_formatters.py  test_logging_integration.py  test_logging_sinks.py  test_logging_sinks_systemd.py  test_logging_trace.py  test_orchestrator.py  test_plugin_template.py  test_routing.py  test_server_selection.py  test_server_state.py  test_singbox_exporter.py  test_socket_client.py  test_socket_client_fixes.py  (+6 more)
tests/edge/: test_exporter_edge_cases.py  test_i18n_loader.py  (+4 more)
(+67 files in other folders)
