[project]
name = "sboxmgr"
version = "1.4.0"
description = "Sing-box config manager CLI (sboxctl)"
authors = [
    { name = "Mikhail Stepanov", email = "kpblcaoo@gmail.com" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "requests>=2.28.0",
    "python-dotenv",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "packaging>=21.0",
    "sbox-common @ file:///home/kpblc/projects/subbox/sbox-common",
]

[project.scripts]
sboxctl = "sboxmgr.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "black",
    "pre-commit",
    "detect-secrets",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
